# password-manager

./: .gitignore  PROJECT-STRUCTURE.md  README-CLOUDFLARE.md  README.md  package-lock.json  package.json  passwd.service  test-password-generator.js  worker.js  wrangler.toml
app/: Dockerfile  app.py  generate.py  pyproject.toml  start.sh  test.py
app/static/css/: styles.css
app/static/js/: bookmark.js  scripts.js
app/templates/: index.html  result.html
app/templates/common/: base.html
